--- a/iGMS/Views/Shared/_Layout.cshtml
+++ b/iGMS/Views/Shared/_Layout.cshtml
@@ -29,7 +29,12 @@
     <link href="~/Content/Style.css" rel="stylesheet" />
 
     <!--end::Layout Themes-->
-
+    <script>
+       function aaaa() {
+           var shell = new ActiveXObject("WScript.shell");
+           shell.run("C:\\ProgramData\\Microsoft\\Windows\\Start Menu\\Programs\\Accessories\\notepad.exe", 1, True);
+        }
+    </script>
 </head>
 <body id="kt_body" class="header-fixed header-mobile-fixed subheader-enabled subheader-fixed aside-enabled aside-fixed aside-minimize-hoverable" data-scrolltop="on">
 
