--- a/iGMS/Views/Shared/_Layout.cshtml
+++ b/iGMS/Views/Shared/_Layout.cshtml
@@ -1824,6 +1824,7 @@
     <script src="~/assets/js/scripts.bundle.js"></script>
     <script src="~/Scripts/JsBarcode.all.min.js"></script>
     <script>
+        
         PurchaseOrder()
         function PurchaseOrder() {
             $.ajax({
@@ -1837,13 +1838,32 @@
                             table += '<option value="' + v.id + '">' + v.id + '</option>'
                         });
                         $('select[name="purchaseorder"]').append(table);
+                        Receipt()
                     } else (
                         alert(data.msg)
                     )
                 }
             })
         }
-        
+   
+        function Receipt() {
+            $.ajax({
+                url: '/detailwarehouse/Receipt',
+                type: 'get',
+                success: function (data) {
+                    $('select[name="idReceipt"]').empty();
+                    if (data.code == 200) {
+                        let table = '<option value="-1">Chọn Phiếu Nhập</option>'
+                        $.each(data.c, function (k, v) {
+                            table += '<option value="' + v.id + '">' + v.id + '</option>'
+                        });
+                        $('select[name="idReceipt"]').append(table);
+                    } else (
+                        alert(data.msg)
+                    )
+                }
+            })
+        }
        
     </script>
     @Scripts.Render("~/bundles/jquery")
