--- a/iGMS/Views/Home/Index.cshtml
+++ b/iGMS/Views/Home/Index.cshtml
@@ -466,9 +466,9 @@
 @section scripts{
     <script>
         Shift()
-        ValidateMoney('tiendauca')
-        ValidateMoney('tiencuoica')
-        ValidateMoney('tienthucban')
+        //ValidateMoney('tiendauca')
+        //ValidateMoney('tiencuoica')
+        //ValidateMoney('tienthucban')
         function Shift() {
             $.ajax({
                 url: '/home/Shift',
