--- a/iGMS/Views/Home/Index.cshtml
+++ b/iGMS/Views/Home/Index.cshtml
@@ -37,9 +37,15 @@
                             <label>Số Lượng</label>
                             <input class="form-control" type="number" placeholder="Số Lượng" id="amountgoods" />
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <label>(%)CKHH</label>
                             <input class="form-control" type="number" placeholder="0%" id="discountgoods" />
+                        </div>
+                        <div class="col-1">
+                            <label>Delete</label>
+                            <div name="deleteHH" class="Point">
+                                <img src="~/Images/icons8-remove-38.png" />
+                            </div>                     
                         </div>
                     </div>
                     <div class="form-group row" style="padding:2%">
