--- a/iGMS/assets/css/style.bundle.css
+++ b/iGMS/assets/css/style.bundle.css
@@ -4,6 +4,9 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+.Point{
+    cursor:pointer;
+}
 tr:nth-child(even) {
     background-color: #dddddd;
 }
