--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -86,7 +86,7 @@
                 <span name="warehouse"></span>
             </div>
         </div>
-        <div class="form-group  row">
+        <div class="form-group  row tablenhan">
             <label for="example-search-input" class="col-2 col-form-label">Hàng Hóa<span style="color:red"> (*) </span></label>
             <div class="col-10" style="height: 500px;overflow-y: scroll;">
                 <table class="table table-separate table-head-custom table-checkable dataTable no-footer dtr-inline" id="kt_datatable" role="grid" aria-describedby="kt_datatable_info" style="width: 1234px;">
