--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -32,8 +32,8 @@
         <div class="form-group row">
             <label class="col-form-label col-2">Số Đơn Hàng</label>
             <div class="col-10">
-                <select class="form-control selectpicker" data-size="7" data-live-search="true" name="purchaseorder">
-                </select>
+                <input class="form-control " data-size="7" id="purchaseorder" data-live-search="true" name="purchaseorder" />
+
             </div>
         </div>
         <div class="form-group row">
@@ -196,7 +196,7 @@
                     <div class="col-4">
                         <p>Người Nhận</p>
                         <p>(Ký, ghi rõ họ tên)</p>
-                    </div> 
+                    </div>
                     <div class="col-4">
                         Ngày.....Tháng....Năm........
                         <p>Người Lập Đơn hàng</p>
@@ -215,21 +215,20 @@
     <div class="modal-dialog" role="document" style="max-width:1100px">
         <div class="modal-content">
             <div class="modal-body" id="inct">
-               <table class="table table-bordered">
-                   <thead>
-                       <tr>
-                           <th>Stt</th>
-                           <th>Số Seri</th>
-                           <th>Số CT</th>
-                           <th>Ngày CT</th>
-                           <th>Tiền Thuế</th>
-                           <th>Tiền CT</th>
-                       </tr>
-                   </thead>
-                   <tbody id="tbdct">
-                       
-                   </tbody>
-               </table>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Stt</th>
+                            <th>Số Seri</th>
+                            <th>Số CT</th>
+                            <th>Ngày CT</th>
+                            <th>Tiền Thuế</th>
+                            <th>Tiền CT</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tbdct">
+                    </tbody>
+                </table>
             </div>
             <div class="modal-footer" id=hide>
                 <a type="button" href="/Receipt/Index" class="btn btn-secondary">Close</a>
@@ -268,7 +267,7 @@
                 }
             })
         }
-        
+
         function Method() {
             $.ajax({
                 url: '/Receipt/Method',
@@ -289,4 +288,17 @@
         }
     </script>
     <script src="~/Scripts/Receipt.js"></script>
+    @* Scanner *@
+    <script src="~/Scripts/ebapi-modules.js"></script>
+    <script>
+        EB.Barcode.enable({
+            allDecoders: true
+        }, fnBarcodeScanned);
+        function fnBarcodeScanned(jsonObject) {
+            // alert("Barcode Scanned:{" + JSON.stringify(jsonObject) + "}");
+            document.getElementById('purchaseorder').value = "";
+            document.getElementById('purchaseorder').value = jsonObject.data;
+        }
+
+    </script>
 }
