--- a/iGMS/Views/Shared/_Layout.cshtml
+++ b/iGMS/Views/Shared/_Layout.cshtml
@@ -1838,7 +1838,7 @@
                             table += '<option value="' + v.id + '">' + v.id + '</option>'
                         });
                         $('select[name="purchaseorder"]').append(table);
-                        
+                        Receipt()
                     } else (
                         alert(data.msg)
                     )
@@ -1846,6 +1846,24 @@
             })
         }
    
+        function Receipt() {
+            $.ajax({
+                url: '/detailwarehouse/Receipt',
+                type: 'get',
+                success: function (data) {
+                    $('select[name="idReceipt"]').empty();
+                    if (data.code == 200) {
+                        let table = '<option value="-1">Chọn Phiếu Nhập</option>'
+                        $.each(data.c, function (k, v) {
+                            table += '<option value="' + v.id + '">' + v.id + '</option>'
+                        });
+                        $('select[name="idReceipt"]').append(table);
+                    } else (
+                        alert(data.msg)
+                    )
+                }
+            })
+        }
        
     </script>
     @Scripts.Render("~/bundles/jquery")
