--- a/iGMS/Views/PurchaseOrder/Index.cshtml
+++ b/iGMS/Views/PurchaseOrder/Index.cshtml
@@ -32,7 +32,7 @@
             <div class="col-9 col-form-label">
                 <div class="radio-inline">
                     <label class="radio radio-success">
-                        <input type="radio" value="CH" name="radio" />
+                        <input type="radio" value="CH"  name="radio" />
                         <span></span>
                         Cửa Hàng
                     </label>
@@ -73,12 +73,11 @@
                          width="38" height="38"
                          viewBox="0 0 48 48"
                          style=" fill:#000000;">
-                        <path fill="#616161" d="M34.6 28.1H38.6V45.1H34.6z" transform="rotate(-45.001 36.586 36.587)"></path>
-                        <path fill="#616161" d="M20 4A16 16 0 1 0 20 36A16 16 0 1 0 20 4Z"></path>
-                        <path fill="#37474F" d="M36.2 32.1H40.2V44.400000000000006H36.2z" transform="rotate(-45.001 38.24 38.24)"></path>
-                        <path fill="#64B5F6" d="M20 7A13 13 0 1 0 20 33A13 13 0 1 0 20 7Z"></path>
-                        <path fill="#BBDEFB" d="M26.9,14.2c-1.7-2-4.2-3.2-6.9-3.2s-5.2,1.2-6.9,3.2c-0.4,0.4-0.3,1.1,0.1,1.4c0.4,0.4,1.1,0.3,1.4-0.1C16,13.9,17.9,13,20,13s4,0.9,5.4,2.5c0.2,0.2,0.5,0.4,0.8,0.4c0.2,0,0.5-0.1,0.6-0.2C27.2,15.3,27.2,14.6,26.9,14.2z"></path>
-                    </svg>
+                    <path fill="#616161" d="M34.6 28.1H38.6V45.1H34.6z" transform="rotate(-45.001 36.586 36.587)"></path>
+                    <path fill="#616161" d="M20 4A16 16 0 1 0 20 36A16 16 0 1 0 20 4Z"></path>
+                    <path fill="#37474F" d="M36.2 32.1H40.2V44.400000000000006H36.2z" transform="rotate(-45.001 38.24 38.24)"></path>
+                    <path fill="#64B5F6" d="M20 7A13 13 0 1 0 20 33A13 13 0 1 0 20 7Z"></path>
+                    <path fill="#BBDEFB" d="M26.9,14.2c-1.7-2-4.2-3.2-6.9-3.2s-5.2,1.2-6.9,3.2c-0.4,0.4-0.3,1.1,0.1,1.4c0.4,0.4,1.1,0.3,1.4-0.1C16,13.9,17.9,13,20,13s4,0.9,5.4,2.5c0.2,0.2,0.5,0.4,0.8,0.4c0.2,0,0.5-0.1,0.6-0.2C27.2,15.3,27.2,14.6,26.9,14.2z"></path></svg>
                     <input class="form-control" type="search" placeholder="Tìm Mã Hàng" id="seachidgood" />
                 </div>
                 <table class="table table-separate table-head-custom table-checkable dataTable no-footer dtr-inline" id="kt_datatable" role="grid" aria-describedby="kt_datatable_info" style="width: 1234px;">
@@ -166,7 +165,7 @@
             <div class="col-2">
             </div>
             <div class="col-10">
-                <button type="submit" class="btn btn-success mr-2" onclick="Add()">Tạo Đơn Hàng</button>
+                <button type="submit"  class="btn btn-success mr-2" onclick="Add()">Tạo Đơn Hàng</button>
                 <a href="/PurchaseOrder/Index" type="reset" class="btn btn-secondary">Cancel</a>
             </div>
         </div>
@@ -175,27 +174,24 @@
 <div class="modal" id="BILL" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document" style="max-width:1100px">
         <div class="modal-content">
-            <div class="modal-body" id="in">
+            <div class="modal-body"  id="in">
                 <div class="row">
                     <div class="col-6">
                         <p> <span name="namesupplier"></span></p>
-                        <p><span name="addresssupplier"></span></p>
-                        <p>ĐT : <span name="phonesupplier"></span> -  <span name="faxsupplier"></span></p>
-
+                       <p><span name="addresssupplier"></span></p> 
+                       <p>ĐT : <span name="phonesupplier"></span> -  <span name="faxsupplier"></span></p>
+                                             
                     </div>
-                    <div class="col-4" style="transform: translate(60%, 0px);">
-                        <p>Số ĐH : <span name="iddh"></span></p>
-                        <p>Ngày ĐH : <span name="datedh"></span></p>
-                    </div>
-                    <div class="col-2" style="transform: translate(30%, 0px);">
-                        <div id="qrcode"></div>
+                    <div class="col-6" style="transform: translate(60%, 0px);">
+                        <p >Số ĐH : <span name="iddh"></span></p>
+                        <p >Ngày ĐH : <span name="datedh"></span></p>
                     </div>
 
                 </div>
                 <div class="" style="text-align:center">
                     <h1>Đơn Hàng Mua</h1>
                 </div>
-                <p>- Nhà Cung Cấp : <span name="namesupplier"></span></p>
+                <p >- Nhà Cung Cấp : <span name="namesupplier"></span></p>
                 <p>- Địa Chỉ :<span name="addresssupplier"></span></p>
                 <p>- Phương Thức Thanh Toán : <span name="paydh"></span></p>
                 <p>- Thời Hạn Thanh Toán : <span name="datepaydh"></span></p>
@@ -223,10 +219,10 @@
                     <p>- Tổng Tiền Thuế : <span name="sumpricetax"></span></p>
                     <p>- Tổng Tiền Đơn Hàng : <span name="sumpricedh"></span></p>
                 </div>
-                <p>Tổng Thành Tiền : <span name="Tong"></span></p>
+                 <p>Tổng Thành Tiền : <span name="Tong"></span></p>
                 <div class="row" style="text-align:center">
-                    <div class="col-6">
-                        <p><span name="namesupplier"></span></p>
+                    <div class="col-6" >
+                        <p ><span name="namesupplier"></span></p>
                         <p name="">Người Xác Nhận</p>
                         <p name="">(Ký, ghi rõ họ tên)</p>
                     </div>
@@ -238,7 +234,7 @@
                 </div>
             </div>
             <div class="modal-footer" id=hide>
-                <a type="button" href="/PurchaseOrder/Index" class="btn btn-secondary">Close</a>
+                <a type="button"  href="/PurchaseOrder/Index"  class="btn btn-secondary" >Close</a>
                 <button type="button" onclick="printDiv('in')" class="btn btn-primary">IN</button>
             </div>
         </div>
@@ -251,7 +247,7 @@
         WareHouse();
         Store();
         PayMethod();
-
+     
         ValidateMoney('partialpay')
         //--------------------Select::Supplier--------------
         function Supplier() {
@@ -329,5 +325,4 @@
 
     </script>
     <script src="~/Scripts/PurchaseOrder.js"></script>
-    
 }
