--- a/iGMS/Views/PurchaseOrder/Index.cshtml
+++ b/iGMS/Views/PurchaseOrder/Index.cshtml
@@ -178,13 +178,16 @@
                 <div class="row">
                     <div class="col-6">
                         <p> <span name="namesupplier"></span></p>
-                       <p><span name="addresssupplier"></span></p> 
-                       <p>ĐT : <span name="phonesupplier"></span> -  <span name="faxsupplier"></span></p>
-                                             
+                        <p><span name="addresssupplier"></span></p>
+                        <p>ĐT : <span name="phonesupplier"></span> -  <span name="faxsupplier"></span></p>
+
                     </div>
-                    <div class="col-6" style="transform: translate(60%, 0px);">
-                        <p >Số ĐH : <span name="iddh"></span></p>
-                        <p >Ngày ĐH : <span name="datedh"></span></p>
+                    <div class="col-4" style="transform: translate(60%, 0px);">
+                        <p>Số ĐH : <span name="iddh"></span></p>
+                        <p>Ngày ĐH : <span name="datedh"></span></p>
+                    </div>
+                    <div class="col-2" style="transform: translate(30%, 0px);">
+                        <div id="qrcode"></div>
                     </div>
 
                 </div>
