--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -32,8 +32,7 @@
         <div class="form-group row">
             <label class="col-form-label col-2">Số Đơn Hàng</label>
             <div class="col-10">
-                <select class="form-control selectpicker" data-size="7" data-live-search="true" name="purchaseorder">
-                </select>
+                <input class="form-control " data-size="7" data-live-search="true" name="purchaseorder" />
             </div>
         </div>
         <div class="form-group row">
