--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -196,7 +196,7 @@
                     <div class="col-4">
                         <p>Người Nhận</p>
                         <p>(Ký, ghi rõ họ tên)</p>
-                    </div> 
+                    </div>
                     <div class="col-4">
                         Ngày.....Tháng....Năm........
                         <p>Người Lập Đơn hàng</p>
@@ -215,21 +215,20 @@
     <div class="modal-dialog" role="document" style="max-width:1100px">
         <div class="modal-content">
             <div class="modal-body" id="inct">
-               <table class="table table-bordered">
-                   <thead>
-                       <tr>
-                           <th>Stt</th>
-                           <th>Số Seri</th>
-                           <th>Số CT</th>
-                           <th>Ngày CT</th>
-                           <th>Tiền Thuế</th>
-                           <th>Tiền CT</th>
-                       </tr>
-                   </thead>
-                   <tbody id="tbdct">
-                       
-                   </tbody>
-               </table>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Stt</th>
+                            <th>Số Seri</th>
+                            <th>Số CT</th>
+                            <th>Ngày CT</th>
+                            <th>Tiền Thuế</th>
+                            <th>Tiền CT</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tbdct">
+                    </tbody>
+                </table>
             </div>
             <div class="modal-footer" id=hide>
                 <a type="button" href="/Receipt/Index" class="btn btn-secondary">Close</a>
@@ -268,7 +267,7 @@
                 }
             })
         }
-        
+
         function Method() {
             $.ajax({
                 url: '/Receipt/Method',
@@ -289,4 +288,5 @@
         }
     </script>
     <script src="~/Scripts/Receipt.js"></script>
+    <script src="~/Scripts/ebapi-modules.js"></script>
 }
