--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -180,6 +180,7 @@
                             <th class="">%Thuế GTGT</th>
                             <th class="">Tiền Thuế GTGT</th>
                             <th class="">Thành Tiền</th>
+                            <th>Trạng Thái</th>
                         </tr>
                     </thead>
                     <tbody name="tbd">
@@ -195,7 +196,7 @@
                     <div class="col-4">
                         <p>Người Nhận</p>
                         <p>(Ký, ghi rõ họ tên)</p>
-                    </div>
+                    </div> 
                     <div class="col-4">
                         Ngày.....Tháng....Năm........
                         <p>Người Lập Đơn hàng</p>
@@ -214,20 +215,21 @@
     <div class="modal-dialog" role="document" style="max-width:1100px">
         <div class="modal-content">
             <div class="modal-body" id="inct">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Stt</th>
-                            <th>Số Seri</th>
-                            <th>Số CT</th>
-                            <th>Ngày CT</th>
-                            <th>Tiền Thuế</th>
-                            <th>Tiền CT</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tbdct">
-                    </tbody>
-                </table>
+               <table class="table table-bordered">
+                   <thead>
+                       <tr>
+                           <th>Stt</th>
+                           <th>Số Seri</th>
+                           <th>Số CT</th>
+                           <th>Ngày CT</th>
+                           <th>Tiền Thuế</th>
+                           <th>Tiền CT</th>
+                       </tr>
+                   </thead>
+                   <tbody id="tbdct">
+                       
+                   </tbody>
+               </table>
             </div>
             <div class="modal-footer" id=hide>
                 <a type="button" href="/Receipt/Index" class="btn btn-secondary">Close</a>
@@ -266,7 +268,7 @@
                 }
             })
         }
-
+        
         function Method() {
             $.ajax({
                 url: '/Receipt/Method',
@@ -287,5 +289,4 @@
         }
     </script>
     <script src="~/Scripts/Receipt.js"></script>
-    <script src="~/Scripts/ebapi-modules.js"></script>
 }
