--- a/iGMS/Views/DetailWareHouse/Index.cshtml
+++ b/iGMS/Views/DetailWareHouse/Index.cshtml
@@ -23,8 +23,8 @@
             <label for="example-password-input" class="col-2 col-form-label">Số Phiếu Nhập <span style="color:red"> (*) </span></label>
             <div class="col-10">
                 <div class="input-group ">
-                    <select class="form-control selectpicker" data-size="7" data-live-search="true" name="idReceipt">
-                    </select>
+                    <input class="form-control selectpicker" data-size="7" data-live-search="true" name="idReceipt" />
+
                 </div>
             </div>
         </div>
@@ -67,14 +67,8 @@
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Stt</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Mã Hàng</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Tên Hàng</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Đơn Vị</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Số Lượng</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Đơn Giá</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">%Chiết Khấu</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Tiền Chiết Khấu</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">%Thuế GTGT</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Tiền Thuế GTGT</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Thành Tiền</th>
+
                         </tr>
                     </thead>
                     <tbody name="tbd">
@@ -127,14 +121,7 @@
                             <th>Stt</th>
                             <th class="">Mã Hàng</th>
                             <th class="">Tên Hàng</th>
-                            <th class="">Đơn Vị</th>
                             <th class="">Số Lượng</th>
-                            <th class="">Đơn Giá</th>
-                            <th class="">%Chiết Khấu</th>
-                            <th class="">Tiền Chiết Khấu</th>
-                            <th class="">%Thuế GTGT</th>
-                            <th class="">Tiền Thuế GTGT</th>
-                            <th class="">Thành Tiền</th>
                         </tr>
                     </thead>
                     <tbody name="tbd1">
