--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -171,6 +171,7 @@
                     <thead>
                         <tr role="row">
                             <th>Stt</th>
+                            <th class="">Trạng Thái</th>
                             <th class="">Mã Hàng</th>
                             <th class="">Tên Hàng</th>
                             <th class="">Đơn Vị</th>
