--- a/iGMS/Views/Shared/_Layout.cshtml
+++ b/iGMS/Views/Shared/_Layout.cshtml
@@ -279,6 +279,24 @@
                                     </li>
                                     <li class="menu-item menu-item-submenu menu-item-rel menu-item-active" data-menu-toggle="click" aria-haspopup="true">
                                         <a class="menu-link menu-toggle">
+                                            <span class="menu-text">Quản Lý Bán Hàng</span>
+                                            <i class="menu-arrow"></i>
+                                        </a>
+                                        <div class="menu-submenu menu-submenu-classic menu-submenu-left">
+                                            <ul class="menu-subnav">
+                                                <li class="menu-item" aria-haspopup="true">
+                                                    <a name="WarehouseManagement" href="/SaleOrder/Index" class="menu-link">
+                                                        <span class="svg-icon menu-icon">
+                                                            <img src="~/Images/icons8-purchase-order-19.5.png" />
+                                                        </span>
+                                                        <span class="menu-text">Lập Phiếu Bán Hàng</span>
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li class="menu-item menu-item-submenu menu-item-rel menu-item-active" data-menu-toggle="click" aria-haspopup="true">
+                                        <a class="menu-link menu-toggle">
                                             <span class="menu-text">Quản Lý Kho Hàng</span>
                                             <i class="menu-arrow"></i>
                                         </a>
